# Clanka

./: .gitignore  Modelfile.example  README.md  clanka.py  main.py  pyproject.toml
core/: clanka.py
memory/: clanka_memory.json
