[project]
name = "clanka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.1",
    "psutil>=7.2.2",
    "rich>=15.0.0",
]
[project.scripts]
clanka = "main:main"
[tool.setuptools]
py-modules = ["main", "clanka"]
