[project]
name = "clanka"
version = "0.1.0"
description = "A sarcastic, local, CLI-native AI assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.1.8",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
clanka = "main:run"

[tool.setuptools]
py-modules = ["main", "clanka"]
